# i3rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml
.github/workflows/: ci.yml
crates/i3rs-app/: Cargo.toml
crates/i3rs-app/src/: app.rs  main.rs  state.rs  workspace.rs
crates/i3rs-app/src/panels/: channel_browser.rs  cursor_readout.rs  graph.rs  math_editor.rs  mod.rs  report.rs  timeline.rs  track_map.rs
crates/i3rs-cli/: Cargo.toml
crates/i3rs-cli/src/: main.rs
crates/i3rs-cli/tests/: cli_tests.rs
crates/i3rs-core/: Cargo.toml
crates/i3rs-core/src/: downsample.rs  export.rs  lap_detect.rs  ld_parser.rs  ldx_parser.rs  lib.rs  math_engine.rs  math_expr.rs  track.rs
crates/i3rs-core/tests/: integration_tests.rs
docs/: PLAN.md  ld-file-format.md  m1pkg-file-format.md
test_data/: VIR_LAP.ldx
